edition = "2023";

package order.v1;

import "google/type/money.proto";

import "common.proto";
import "example.proto";
import "global.proto";

option go_package = "example.com/api/order/v1";

// Order message using imported types
message Order
{
  // Unique order ID
	string id = 1;

  // The user who placed the order (from example.proto)
	example.v1.User customer = 2;

  // Order date (from common.proto)
	common.v1.Date order_date = 3;

  // Shipping address (from example.proto)
	example.v1.Address shipping_address = 4;

  // Order total (from common.proto)
	common.v1.Money total = 5;

  // Order status
	OrderStatus status = 6;

  // Line items
	repeated LineItem items = 7;

  // Order metadata
	map<string, string> metadata = 8;
}

// Line item in an order
message LineItem
{
	string          product_id   = 1;
	string          product_name = 2;
	int32           quantity     = 3;
	common.v1.Money unit_price   = 4;
	common.v1.Money total_price  = 5;
}

// Order status
enum OrderStatus
{
	ORDER_STATUS_UNSPECIFIED = 0;
	ORDER_STATUS_PENDING     = 1;
	ORDER_STATUS_CONFIRMED   = 2;
	ORDER_STATUS_SHIPPED     = 3;
	ORDER_STATUS_DELIVERED   = 4;
	ORDER_STATUS_CANCELLED   = 5;
}

// Order service
service OrderService
{
  // Create a new order
	rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);

  // Get an order by ID
	rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);

  // List orders for a user
	rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);

  // Update order status
	rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

message CreateOrderRequest
{
	Order order = 1;
}

message CreateOrderResponse
{
	Order order = 1;
}

message GetOrderRequest
{
	string        id          = 1;
	GlobalMessage global_info = 2;
}

message GetOrderResponse
{
	Order order = 1;
}

message ListOrdersRequest
{
	string                      user_id    = 1;
	common.v1.PaginationRequest pagination = 2;
}

message ListOrdersResponse
{
	repeated Order               orders     = 1;
	common.v1.PaginationResponse pagination = 2;
}

message UpdateOrderStatusRequest
{
	string      order_id = 1;
	OrderStatus status   = 2;
}

message UpdateOrderStatusResponse
{
	Order order = 1;
}
